[package]
name = "hypec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypescript-bytecode = { path = "../hypescript-bytecode" }
hypescript-lang = { path = "../hypescript-lang" }
structopt = "0.3.26"
