[package]
name = "hypescript-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypescript-bytecode = { path = "../hypescript-bytecode" }
thiserror = "1.0.50"

[dev-dependencies]
hypescript-vm = { path = "../hypescript-vm" }
