[package]
name = "hypescript-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
hypescript-bytecode = { path = "../hypescript-bytecode" }
thiserror = "1.0.50"

[dev-dependencies]
hypescript-vm = { path = "../hypescript-vm" }
