[package]
name = "hypescript-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypescript-util = { path = "../hypescript-util" }
hypescript-bytecode = { path = "../hypescript-bytecode" }
thiserror = "1.0.50"
